# ocamuse

./: .ocamlformat  CLAUDE.md  Claude.md  LICENSE.md  README.md  dune-project  ocamuse.opam
.github/workflows/: docs.yml
doc/: README.md  dune  index.mld
ocaml-music-theory/: LICENSE  README.md  dune-project  ocaml-music-theory.opam
ocaml-music-theory/examples/: basic_usage.ml  dune  theory_showcase.ml
ocaml-music-theory/src/: dune  interval.ml  interval.mli  music_theory.ml  music_theory.mli  note.ml  note.mli  pitch.ml  pitch.mli
ocaml-music-theory/src/harmony/: chord.ml  chord.mli
ocaml-music-theory/src/scales/: circle_of_fifths.ml  circle_of_fifths.mli  mode.ml  mode.mli  scale.ml  scale.mli
ocaml-music-theory/test/: dune  test_harmony.ml  test_interval.ml  test_note.ml  test_pitch.ml  test_scales.ml
src/: app_state.ml  arpeggio_mode.ml  chord_mode.ml  classes.ml  color.ml  color_theme.ml  config.ml  conv.ml  display.ml  draw.ml  draw_cell.ml  draw_chord_diagram.ml  draw_fretted.ml  draw_interline.ml  draw_line.ml  draw_plain.ml  draw_primitives.ml  dune  fretboard.ml  main.ml  ocamuse.ml  pp.ml  selectors.ml  theory.ml  types.ml  widgets.ml
src/multi_view/: dune  layout.ml  panel.ml  sync.ml
src/multi_view/suggestions/: chord_suggestions.ml  dune
src/multi_view/views/: dune  harmony_view.ml
src/widgets/: dune  mini_fretboard.ml
