(lang dune 3.0)

(implicit_transitive_deps false)

(name ocamuse)

(license ISC)

(authors "TODO")

(maintainers "TODO")

(source
 (uri TODO/ocamuse))

(homepage TODO/ocamuse)

(bug_reports TODO/ocamuse)

(documentation TODO/ocamuse)

(generate_opam_files true)

(package
 (name ocamuse)
 (synopsis "OCaml library/executable to TODO")
 (description
  "ocamuse is an OCaml library/executable to TODO.")
 (tags
  (ocamuse TODO TODO TODO TODO))
 (depends
  (ocaml
   (>= 4.08))))
