(executable
 (public_name ocamuse)
 (libraries lambda-term lwt lwt.unix zed fmt ocaml-music-theory multi_view chord_suggestions multi_view_views widgets)
 (modules
  app_state
  color
  color_theme
  config
  conv
  display
  draw
  draw_interline
  draw_plain
  draw_primitives
  draw_fretted
  fretboard
  ocamuse
  classes
  pp
  selectors
  types
  widgets))
